tests/cases/structs/ok/union-by-match.ari
enum CipherType {
  stream,
  block,
  aead,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct GenericStreamCipher {
  value: i64,
}

struct GenericBlockCipher {
  value: i64,
}

struct GenericAeadCipher {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => GenericStreamCipher,
    block => GenericBlockCipher,
    aead => GenericAeadCipher,
  },
}

fn score(packet: TLSCiphertext) -> i64 {
  return match packet.fragment {
    stream(stream_payload) => stream_payload.value + 1,
    block(block_payload) => block_payload.value + 2,
    aead(aead_payload) => aead_payload.value + 3,
  };
}

fn main() -> i64 {
  let packet = TLSCiphertext {
    security: SecurityParameters { cipher_type: block },
    fragment: block => GenericBlockCipher { value: 40 },
  };
  return score(packet);
}
